# isomorphic_yagis

./: .gitignore  README.md  TODO.md  _config.yml  linked_reflector.ipynb  pyproject.toml  shared_reflector.ipynb  v.ipynb
isomorphic_yagis/: __init__.py  algorithm.py  nec.py  utils.py
tests/: test_algorithm.py  test_utils.py
